--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -7,8 +7,10 @@
     <!-- Display the total members count with formatting -->
     <h2 class="member-count">Total Members: {{ total_members }}</h2>
 
+  <!--  <p>Total Members: {{ total_members }}</p>  -->
+
     <a href="https://www.pamember.org.za" target="_blank" rel="noopener noreferrer">
-        <img src="/static/images/vision2026.png" alt="Patriotic Alliance Logo" style="width:1200px;height:auto;">
+        <img src="/static/images/vision2026.png" alt="Patriotic Alliance Logo" class="responsive-img pa-logo">
     </a>
 </div>
 
