--- a/app/templates/view_member.html
+++ b/app/templates/view_member.html
@@ -84,14 +84,14 @@
     </div>
 
     <!-- Password Field for Update -->
-    <div>
-        <label for="password">Password</label><br>
-        <input type="password" name="password" id="password" required>
-    </div>
+<div>
+    <label for="admin_password">Password</label><br>
+    <input type="password" name="admin_password" id="admin_password" required>
+</div>
 
-    <div>
-        <button type="submit" name="update" class="button">Update Member</button>
-    </div>
+<div>
+    <button type="submit" name="update" class="button">Update Member</button>
+</div>
 </form>
 
 <!-- Delete Member Form -->
